# itzma-lint

./: .bumpversion.cfg  .flake8  .pylintrc  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  coverage.json  helpers.py  pyproject.toml  requirements.txt  test_itzma.py  testing_checks.py
.github/workflows/: python-publish.yml  test.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/source/: conf.py  index.rst
src/: .flake8  checks.py  flake8_itzma.py  helpers.py  test_itzma.py  testing_checks.py
src/test_samples/: test2.py  test5.py
src/tests/: integration_tests.py  test_itzma.py  unit_tests.py
src/tests/test_samples/: test1.py  test2.py  test3.py  test4.py  test5.py
test_samples/: test1.py  test3.py  test4.py
tests/: integration_tests.py  unit_tests.py
tests_old/: integration_tests.py  unit_tests.py
